// ============================================
// ENUMS
// ============================================

Enum "transactions_payment_method_enum" {
  "cash"
  "qris"
  "midtrans"
}

Enum "transactions_payment_status_enum" {
  "pending"
  "paid"
  "cancelled"
  "refunded"
}

Enum "stock_movements_movement_type_enum" {
  "in"
  "out"
  "adjustment"
  "sale"
  "return"
}

Enum "chat_messages_role_enum" {
  "user"
  "assistant"
  "system"
}

// ============================================
// AUTHENTICATION & AUTHORIZATION TABLES
// ============================================

Table "users" {
  "id" BIGINT [pk, increment]
  "name" VARCHAR(255) [not null]
  "email" VARCHAR(255) [unique, not null]
  "email_verified_at" TIMESTAMP
  "password" VARCHAR(255) [not null]
  "is_active" TINYINT(1) [not null, default: 1]
  "two_factor_secret" TEXT
  "two_factor_recovery_codes" TEXT
  "two_factor_confirmed_at" TIMESTAMP
  "remember_token" VARCHAR(100)
  "created_at" TIMESTAMP
  "updated_at" TIMESTAMP

  Indexes {
    name [name: "idx_users_name"]
    email [name: "idx_users_email"]
  }
}

Table "password_reset_tokens" {
  "email" VARCHAR(255) [pk, not null]
  "token" VARCHAR(255) [not null]
  "created_at" TIMESTAMP
}

Table "sessions" {
  "id" VARCHAR(255) [pk]
  "user_id" BIGINT
  "ip_address" VARCHAR(45)
  "user_agent" TEXT
  "payload" LONGTEXT [not null]
  "last_activity" INT [not null]

  Indexes {
    user_id [name: "sessions_user_id_index"]
    last_activity [name: "sessions_last_activity_index"]
  }
}

Table "roles" {
  "id" BIGINT [pk, increment]
  "name" VARCHAR(255) [not null]
  "guard_name" VARCHAR(255) [not null]
  "created_at" TIMESTAMP
  "updated_at" TIMESTAMP

  Indexes {
    (name, guard_name) [unique, name: "role_name_guard"]
  }
}

Table "permissions" {
  "id" BIGINT [pk, increment]
  "name" VARCHAR(255) [not null]
  "guard_name" VARCHAR(255) [not null]
  "created_at" TIMESTAMP
  "updated_at" TIMESTAMP

  Indexes {
    (name, guard_name) [unique, name: "permission_name_guard"]
  }
}

Table "model_has_roles" {
  "role_id" BIGINT [not null]
  "model_type" VARCHAR(255) [not null]
  "model_id" BIGINT [not null]

  Indexes {
    (role_id, model_id, model_type) [pk]
    (model_id, model_type) [name: "model_has_roles_model_index"]
  }
}

Table "model_has_permissions" {
  "permission_id" BIGINT [not null]
  "model_type" VARCHAR(255) [not null]
  "model_id" BIGINT [not null]

  Indexes {
    (permission_id, model_id, model_type) [pk]
    (model_id, model_type) [name: "model_has_permissions_model_index"]
  }
}

Table "role_has_permissions" {
  "permission_id" BIGINT [not null]
  "role_id" BIGINT [not null]

  Indexes {
    (permission_id, role_id) [pk]
  }
}

// ============================================
// MASTER DATA TABLES
// ============================================

Table "categories" {
  "id" BIGINT [pk, increment]
  "name" VARCHAR(100) [not null]
  "created_at" TIMESTAMP
  "updated_at" TIMESTAMP

  Indexes {
    name [name: "idx_categories_name"]
  }
}

Table "units" {
  "id" BIGINT [pk, increment]
  "name" VARCHAR(50) [not null]
  "short_name" VARCHAR(10) [not null]
  "created_at" TIMESTAMP
  "updated_at" TIMESTAMP

  Indexes {
    name [name: "idx_units_name"]
    short_name [name: "idx_units_short_name"]
  }
}

Table "products" {
  "id" BIGINT [pk, increment]
  "product_code" VARCHAR(20) [unique, not null]
  "barcode" VARCHAR(50) [unique]
  "name" VARCHAR(255) [not null]
  "buy_price" DECIMAL(12,2) [not null]
  "sell_price" DECIMAL(12,2) [not null]
  "stock" INT [not null, default: 0]
  "min_stock" INT [not null, default: 0]
  "image" VARCHAR(255)
  "is_active" TINYINT(1) [not null, default: 1]
  "category_id" BIGINT
  "unit_id" BIGINT
  "created_at" TIMESTAMP
  "updated_at" TIMESTAMP

  Indexes {
    barcode [name: "idx_products_barcode"]
    category_id [name: "idx_products_category"]
    is_active [name: "idx_products_active"]
    name [name: "idx_products_name"]
    product_code [name: "idx_products_code"]
  }
}

Table "expense_categories" {
  "id" BIGINT [pk, increment]
  "name" VARCHAR(100) [not null]
  "created_at" TIMESTAMP
  "updated_at" TIMESTAMP

  Indexes {
    name [name: "idx_expense_categories_name"]
  }
}

// ============================================
// TRANSACTION TABLES
// ============================================

Table "transactions" {
  "id" BIGINT [pk, increment]
  "receipt_number" VARCHAR(50) [unique, not null]
  "subtotal" DECIMAL(12,2) [not null]
  "discount_amount" DECIMAL(12,2) [not null, default: 0.00]
  "tax_amount" DECIMAL(12,2) [not null, default: 0.00]
  "total_price" DECIMAL(12,2) [not null]
  "payment_method" transactions_payment_method_enum [not null, default: 'cash']
  "payment_status" transactions_payment_status_enum [not null, default: 'pending']
  "payment_reference" VARCHAR(255)
  "amount_paid" DECIMAL(12,2) [not null, default: 0.00]
  "change_amount" DECIMAL(12,2) [not null, default: 0.00]
  "note" TEXT
  "transaction_date" TIMESTAMP [not null]
  "user_id" BIGINT [not null]
  "created_at" TIMESTAMP
  "updated_at" TIMESTAMP

  Indexes {
    receipt_number [name: "idx_transactions_receipt"]
    transaction_date [name: "idx_transactions_date"]
    payment_status [name: "idx_transactions_status"]
    user_id [name: "idx_transactions_user"]
  }
}

Table "transaction_items" {
  "id" BIGINT [pk, increment]
  "transaction_id" BIGINT [not null]
  "product_id" BIGINT [not null]
  "product_name" VARCHAR(255) [not null]
  "price_buy_snapshot" DECIMAL(12,2) [not null]
  "price_sell" DECIMAL(12,2) [not null]
  "quantity" INT [not null]
  "discount_amount" DECIMAL(12,2) [not null, default: 0.00]
  "subtotal" DECIMAL(12,2) [not null]

  Indexes {
    transaction_id [name: "idx_items_transaction"]
    product_id [name: "idx_items_product"]
  }
}

// ============================================
// INVENTORY TABLES
// ============================================

Table "stock_movements" {
  "id" BIGINT [pk, increment]
  "movement_type" stock_movements_movement_type_enum [not null]
  "qty" INT [not null]
  "stock_before" INT [not null]
  "stock_after" INT [not null]
  "reason" VARCHAR(255)
  "product_id" BIGINT [not null]
  "user_id" BIGINT
  "reference_id" BIGINT
  "created_at" TIMESTAMP
  "updated_at" TIMESTAMP

  Indexes {
    product_id [name: "idx_movements_product"]
    movement_type [name: "idx_movements_type"]
    created_at [name: "idx_movements_created"]
    user_id [name: "idx_movements_user"]
  }
}

// ============================================
// EXPENSE TABLES
// ============================================

Table "expenses" {
  "id" BIGINT [pk, increment]
  "user_id" BIGINT [not null]
  "expense_category_id" BIGINT
  "name" VARCHAR(255) [not null]
  "amount" DECIMAL(15,2) [not null]
  "date" DATE [not null]
  "note" TEXT
  "created_at" TIMESTAMP
  "updated_at" TIMESTAMP

  Indexes {
    user_id [name: "idx_expenses_user"]
    expense_category_id [name: "idx_expenses_category"]
    date [name: "idx_expenses_date"]
  }
}

// ============================================
// SETTINGS TABLE
// ============================================

Table "shop_settings" {
  "id" BIGINT [pk, increment]
  "shop_name" VARCHAR(255) [not null, default: 'Toko ATK']
  "address" TEXT
  "email" VARCHAR(255)
  "phone" VARCHAR(50)
  "npwp" VARCHAR(50)
  "logo_path" VARCHAR(255)
  "qris_image_path" VARCHAR(255)
  "midtrans_merchant_id" VARCHAR(255)
  "midtrans_client_key" VARCHAR(255)
  "midtrans_server_key" VARCHAR(255)
  "midtrans_is_production" TINYINT(1) [not null, default: 0]
  "tax_rate" DECIMAL(5,2) [not null, default: 11.00]
  "receipt_footer" TEXT
  "paper_size" VARCHAR(20) [not null, default: 'mm_80']
  "created_at" TIMESTAMP
  "updated_at" TIMESTAMP
}

// ============================================
// CHATBOT / AI TABLES
// ============================================

Table "chat_conversations" {
  "id" BIGINT [pk, increment]
  "user_id" BIGINT [not null]
  "title" VARCHAR(255)
  "created_at" TIMESTAMP
  "updated_at" TIMESTAMP

  Indexes {
    user_id [name: "idx_chat_conv_user"]
  }
}

Table "chat_messages" {
  "id" BIGINT [pk, increment]
  "conversation_id" BIGINT [not null]
  "role" chat_messages_role_enum [not null]
  "content" TEXT [not null]
  "metadata" JSON
  "used_tool" TINYINT(1) [not null, default: 0]
  "tool_used" VARCHAR(100)
  "ip_address" VARCHAR(45)
  "tokens_used" BIGINT
  "created_at" TIMESTAMP
  "updated_at" TIMESTAMP

  Indexes {
    conversation_id [name: "idx_chat_msg_conversation"]
    role [name: "idx_chat_msg_role"]
  }
}

// ============================================
// QUEUE & CACHE TABLES (Laravel Default)
// ============================================

Table "cache" {
  "key" VARCHAR(255) [pk]
  "value" MEDIUMTEXT [not null]
  "expiration" INT [not null]
}

Table "cache_locks" {
  "key" VARCHAR(255) [pk]
  "owner" VARCHAR(255) [not null]
  "expiration" INT [not null]
}

Table "jobs" {
  "id" BIGINT [pk, increment]
  "queue" VARCHAR(255) [not null]
  "payload" LONGTEXT [not null]
  "attempts" TINYINT [not null]
  "reserved_at" INT
  "available_at" INT [not null]
  "created_at" INT [not null]

  Indexes {
    queue [name: "jobs_queue_index"]
  }
}

Table "job_batches" {
  "id" VARCHAR(255) [pk]
  "name" VARCHAR(255) [not null]
  "total_jobs" INT [not null]
  "pending_jobs" INT [not null]
  "failed_jobs" INT [not null]
  "failed_job_ids" LONGTEXT [not null]
  "options" MEDIUMTEXT
  "cancelled_at" INT
  "created_at" INT [not null]
  "finished_at" INT
}

Table "failed_jobs" {
  "id" BIGINT [pk, increment]
  "uuid" VARCHAR(255) [unique, not null]
  "connection" TEXT [not null]
  "queue" TEXT [not null]
  "payload" LONGTEXT [not null]
  "exception" LONGTEXT [not null]
  "failed_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    uuid [unique, name: "failed_jobs_uuid_unique"]
  }
}

// ============================================
// RELATIONSHIPS / FOREIGN KEYS
// ============================================

// Session & User
Ref: "users"."id" < "sessions"."user_id" [delete: set null]

// Role & Permission relationships (Spatie/laravel-permission)
Ref: "roles"."id" < "model_has_roles"."role_id" [delete: cascade]
Ref: "permissions"."id" < "model_has_permissions"."permission_id" [delete: cascade]
Ref: "permissions"."id" < "role_has_permissions"."permission_id" [delete: cascade]
Ref: "roles"."id" < "role_has_permissions"."role_id" [delete: cascade]

// Product relationships
Ref: "categories"."id" < "products"."category_id" [delete: set null]
Ref: "units"."id" < "products"."unit_id" [delete: set null]

// Transaction relationships
Ref: "users"."id" < "transactions"."user_id" [delete: cascade]
Ref: "transactions"."id" < "transaction_items"."transaction_id" [delete: cascade]
Ref: "products"."id" < "transaction_items"."product_id" [delete: cascade]

// Stock movement relationships
Ref: "products"."id" < "stock_movements"."product_id" [delete: cascade]
Ref: "users"."id" < "stock_movements"."user_id" [delete: set null]
Ref: "transactions"."id" < "stock_movements"."reference_id" [delete: set null]

// Expense relationships
Ref: "users"."id" < "expenses"."user_id" [delete: cascade]
Ref: "expense_categories"."id" < "expenses"."expense_category_id" [delete: set null]

// Chatbot relationships
Ref: "users"."id" < "chat_conversations"."user_id" [delete: cascade]
Ref: "chat_conversations"."id" < "chat_messages"."conversation_id" [delete: cascade]